--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -8,13 +8,9 @@ h1 {
 
 .section {
   border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
+  background-color: gray;
   height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  margin: 15px 15px;
 }
 
 /* Simple Responsive Framework. */
