--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -6,19 +6,14 @@ h1 {
   margin-bottom: 15px;
 }
 .section{
-  border: 1px solid black;
-  background-color: gray;
+  border: 1px solid #000000;
+  background-color: #A9A9A9;
   margin: 15px 15px;
   padding: 5px 5px;
 }
-p{
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5px;
-}
 .food{
-  background-color: white;
-  border: 1px solid black;
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
   padding: 5px;
 }
 
