--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -15,7 +15,8 @@ h1 {
   background-color: #FFFFFF;
   border: 1px solid #000000;
   padding: 5px;
-  width: auto;
+  width: 30%;
+  text-align: centre;
 }
 
 
