--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -15,8 +15,8 @@ h1 {
   background-color: #FFFFFF;
   border: 1px solid #000000;
   padding: 5px;
-  width: 30%;
-  text-align: centre;
+  width: 40px;
+  text-align: center;
 }
 
 
