--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,6 +10,7 @@ h1 {
   background-color: #A9A9A9;
   margin: 15px 15px;
   padding: 5px 5px;
+  text-align: center;
 }
 .food{
   background-color: #FFFFFF;
