--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,6 +10,7 @@ h1 {
   background-color: #A9A9A9;
   margin: 15px 15px;
   padding: 5px 5px;
+  postion: relative;
 }
 .food{
   background-color: #FFFFFF;
@@ -17,6 +18,8 @@ h1 {
   padding: 5px;
   width: fit-content;
   text-align: center;
+  position: absolute;
+  float: right;
 }
 
 
