--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,25 +1,49 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 h1 {
   margin-bottom: 15px;
+  text-align: center;
 }
 .section{
   border: 1px solid #000000;
   background-color: #A9A9A9;
   margin: 15px 15px;
-  padding: 5px 5px;
-  postion: relative;
 }
-.food{
-  background-color: #FFFFFF;
+.chicken{
+  background-color: pink;
   border: 1px solid #000000;
   padding: 5px;
-  width: fit-content;
+  margin-bottom: : 10px;
+  width: 150px;
   text-align: center;
-  position: absolute;
-  float: right;
+  float:right;
+}
+.beef{
+  background-color: red;
+  border: 1px solid #000000;
+  padding: 5px;
+  margin-bottom: : 10px;
+  width: 150px;
+  text-align: center;
+  float:right;
+}
+.sushi{
+  background-color: yellow;
+  border: 1px solid #000000;
+  padding: 5px;
+  margin-bottom: : 10px;
+  width: 150px;
+  text-align: center;
+  float:right;
+}
+
+.section p{
+	clear: both;
+	padding: 5px;
 }
 
 
